# expo-mealplanner

./: .env.example  .gitignore  GEMINI.md  README.md  app.json  babel.config.js  biome.json  drizzle.config.ts  drizzle.config.turso.ts  eas.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  verify.css
recipe-manager/: .env.example  README.md  main.py  pyproject.toml
recipe-manager/prompts/: recipe_parser.md
recipe-manager/recipes_data/: banana_burro_mandorle.json  buddha_bowl_vegano.json  frittata_zucchine.json  hamburger_manzo.json  hummus_bastoncini_verdure.json  insalata-di-aringa-affumicata.json  insalata-di-broccoli-cavolfiori-e-indivia-belga.json  insalata-di-ceci-e-tonno.json  insalata-di-ceci-estiva.json  insalata-di-ceci-gamberi-e-rucola.json  insalata-di-fagioli-alla-romana.json  insalata-di-fagiolini.json  insalata-di-farro-e-broccoli.json  insalata-di-patate-e-tonno.json  insalata-di-pollo-e-mele.json  insalata-di-pollo-e-zucchine.json  insalata-di-pollo-saporita.json  insalata-invernale.json  insalata-nizzarda.json  insalata-waldorf.json  insalata_fagioli.json  insalata_greca.json  pancake_proteici_banana.json  pasta_integrale_pesto.json  petto_pollo_griglia_patate.json  pollo_allo_yogurt.json  porridge_avena_mirtilli.json  salmone_forno_asparagi.json  spaghetti_di_riso.json  spiedini_di_pollo.json  tofu_saltato_verdure.json  uova_strapazzate_avocado.json  wrap_pollo_verdure.json  yogurt_greco_noci_miele.json  zuppa_lenticchie_rosse.json
recipe-manager/scripts/: tag_protein_sources.py  upload_images.py
(+167 files in other folders)
