[project]
name = "recipe-manager"
version = "0.1.0"
description = "CLI tool for managing NutriPlanIT recipes and ingredients"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cloudinary>=1.44.1",
    "google-genai>=1.56.0",
    "httpx>=0.28.1",
    "libsql-client>=0.3.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/recipe_manager"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
